--- a/app/templates/assets/default/style.css
+++ b/app/templates/assets/default/style.css
@@ -19,6 +19,13 @@
     font-size:250%;
     font-weight: bold;
     line-height: 80px;
+    color: white;
+
+}
+.header-title:hover
+{
+    color:white;
+    text-decoration: none;
 }
 
 
@@ -35,50 +42,256 @@
     margin-top:20px;
 }
 
-.section-container
+
+
+.forum-link
+{
+    color: #202f41;
+    font-weight:600;
+}
+.forum-link:hover
+{
+    color: #204f61;
+    text-decoration: none;
+}
+
+.table-container
 {
     margin-top:20px;
-    border: 1px solid #2c3e50;
-    background-color:#2c3e50;
-
-    border-radius: 3px;
+    border: 1px #2c3e50 solid;
+    border-collapse: collapse;
+    width:100%;
 }
-.section-title
+
+.table-head
+{
+    height:40px;
+    margin-top:20px;
+    border:0px;
+    background-color:#2c3e50;
+}
+
+.table-head-title
 {
 
-    height:25px;
+    height:40px;
     padding-left:15px;
     color:white;
-    line-height: 25px;
+    line-height: 40px;
     font-size:110%;
     font-weight: bold;
 }
-.section-info
-{
-    height:25px;
-    line-height: 25px;
 
+.table-head-info
+{
     color: white;
+    font-size:90%;
+    line-height:40px;
 }
 
-.category-container
+.table-body-container
 {
     background-color:white;
-    border-radius:3px;
+
 }
+
+.table-footer
+{
+    margin-top:20px;
+}
+
 .category-title
 {
     padding-left:15px;
     font-size:105%;
     font-weight:bold;
+    line-height: 30px;
 }
+
+
 .category-description
 {
-    padding-left:15px;
+    margin-top: -5px;
+    padding-left:20px;
     font-size:90%;
 }
 .category-info
 {
+    word-break: break-all;
+}
+
+
+
+
+
+/*
+ Topic styling
+ */
+.post-container
+{
+    margin-top:20px;
+    border: 1px #2c3e50 solid;
+    border-collapse: collapse;
+    width:100%;
+}
+.post-head
+{
     height:43px;
+    border:0px;
+    background-color:#2c3e50;
+    color: white;
+}
+.post-title
+{
+    height:43px;
+    padding-left:15px;
     line-height: 43px;
+    font-size:110%;
+    font-weight: bold;
+    word-break: break-all;
+    float:left;
+}
+.post-actions-container
+{
+    border-top: 1px #2c3e50 solid;
+    padding-top:5px;
+    padding-bottom:5px;
+
+    line-height:29px;
+}
+.post-actions
+{
+    padding-right:15px;
+}
+.post-date-info
+{
+
+    line-height:43px;
+
+    text-align:right;
+    float:right;
+    padding-right:10px;
+
+}
+
+.post-body
+{
+    padding:10px 15px 10px 15px;
+}
+
+.post-signature
+{
+    border-top: 1px rgba(44, 62, 80, 0.37) solid;
+    padding:10px 35px 10px 35px;
+    max-height: 350px;
+}
+
+.user-info
+{
+    padding: 0px 0px 10px 15px;
+    border-bottom: 1px #2c3e50 solid;
+
+}
+.user-info-posts
+{
+    padding: 10px 15px 0px 0px;
+}
+
+.avatar
+{
+    max-width:100px;
+    max-height: 100px;
+}
+
+
+
+
+
+
+
+
+/*
+ Paginator styling
+ */
+.paginate
+{
+    margin-top:10px;
+    background-color: #2c3e50;
+    padding: 5px 15px;
+    color: white;
+}
+.paginate > li
+{
+    list-style-type: none;
+    display: inline;
+    padding-left:2px;
+    padding-right:3px;
+}
+
+.paginate a
+{
+    color: #ffffff;
+}
+
+.paginate a:hover
+{
+    color: #a1d9ff;
+    text-decoration: none;
+}
+.paginate > .active
+{
+    color: white;
+    font-size:110%;
+}
+
+/* Paginator next to topic title */
+.paginate-small
+{
+}
+.paginate-small > li
+{
+    list-style-type: none;
+    display: inline;
+    padding-left:2px;
+    padding-right:3px;
+}
+
+.paginate-small a
+{
+    color: #2c3e50;
+}
+
+.paginate-small a:hover
+{
+    color: #4b647a;
+    text-decoration: none;
+}
+
+
+
+
+
+/*
+ Helper classes
+ */
+.small-text
+{
+    font-size:85%;
+}
+.extra-small-text
+{
+    font-size:75%;
+}
+
+.push-15
+{
+    padding-left:15px;
+}
+.pull-15
+{
+    left-right:-15px;
+}
+.push-top-5
+{
+    margin-top:5px;
 }
