--- a/app/templates/assets/default/css/style.css
+++ b/app/templates/assets/default/css/style.css
@@ -37,6 +37,17 @@
     line-height: 25px;
 }
 
+.user-cp-link
+{
+    color: #ffffff;
+    font-weight:600;
+}
+.user-cp-link:hover
+{
+    color: #cccccc;
+    text-decoration: none;
+}
+
 .content
 {
     margin-top:20px;
@@ -177,6 +188,7 @@
 .post-body
 {
     padding:10px 15px 10px 15px;
+    word-wrap: break-word;
 }
 
 .post-signature
@@ -204,9 +216,26 @@
 }
 
 
+/* Override Bootstrap's BBCode used elements */
+blockquote p {
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+}
+blockquote {
+    padding: 7px 15px 0px;
+    margin: 0 0 21px;
+    border-left: 5px solid #bbbfc0;
+}
 
-
-
+/* Spoiler container */
+.panel {
+    border-radius: 0px;
+}
+.panel-heading {
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+}
 
 
 
@@ -266,6 +295,68 @@
     color: #4b647a;
     text-decoration: none;
 }
+
+
+
+
+/* BBcode / Textarea */
+
+.bbcode-editor {
+    margin-top:50px;
+    width: 100%;
+}
+
+.bbcode-toolbar {
+
+    list-style-type: none;
+    padding:5px 0px 10px 0px;
+
+    margin-bottom:-5px;
+    background-color:#2c3e50;
+}
+
+.bbcode-toolbar li {
+    display: inline;
+    padding-left: 18px;
+    margin-left: 10px;
+    line-height:20px;
+    cursor: pointer;
+    color:white;
+    opacity: 0.8;
+}
+
+.bbcode-toolbar li:hover {
+    opacity: 1;
+}
+
+.bbcode-textarea {
+    width: 100%;
+    height: 150px;
+    padding: 5px;
+    border: 1px solid #999;
+    resize: vertical;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ie-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.bbcode-preview {
+    visibility: hidden;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
